# cleo

./: .gitignore  README.md  error.md  plan.md
.github/workflows/: build-pi-camera.yml
firmware/bbb-controller/: Cargo.toml
firmware/bbb-controller/deploy/: bbb-controller.env  slitcam-bbb-controller.service
firmware/bbb-controller/scripts/: build_prebuilt_armv7.sh  install_from_checkout.sh
firmware/bbb-controller/src/: api.rs  camera.rs  config.rs  dlp.rs  logging.rs  main.rs  motion.rs
firmware/pi-camera/: Cargo.toml  README.md
firmware/pi-camera/deploy/: pi-camera.env  slitcam-motor.service  slitcam-pi-camera.service  uvc-gadget.service
firmware/pi-camera/prebuilt/: README.md
firmware/pi-camera/prebuilt/linux-aarch64/: slitcam-pi-camera  slitcam-pi-camera.sha256
firmware/pi-camera/scripts/: build_prebuilt_linux_aarch64.sh  camera-stream.py  install.sh  install_from_checkout.sh  rpi-uvc-gadget.sh
firmware/pi-camera/src/: api.rs  config.rs  gadget.rs  logging.rs  main.rs  motion.rs
firmware/shared/: Cargo.toml
firmware/shared/src/: lib.rs
webapp/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
webapp/app/: globals.css  layout.tsx  page.tsx
webapp/app/api/bbb/[...path]/: route.ts
webapp/app/api/pi/[...path]/: route.ts
webapp/components/: camera-view.tsx  connection-bar.tsx  device-status.tsx  motion-controls.tsx  slit-controls.tsx
webapp/lib/: api.ts  types.ts
webapp/scripts/: setup.sh
