[package]
name = "slitcam-bbb-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
slitcam-shared = { path = "../shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[profile.release]
panic = "abort"
strip = "symbols"

[profile.bbb-release]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
